# lotus

./: .deny.toml  .gitignore  .gitlab-ci.yml  .typos.toml  Cargo.toml  README.md  meson.build  meson.options
build-aux/git/: pre-push.hook
data/: app.service.in  meson.build
docs/: 404.rst  conduct.rst  conf.py.in  glossary.rst  index.rst  meson.build
docs/_static/css/: header.css  lotus.css
docs/_templates/: layout.html
i18n/en/: lotus-vanilla.ftl  lotus.ftl
lotus/: Cargo.toml  README.md  meson.build
lotus-plugin/: Cargo.toml  meson.build
lotus-plugin/src/: ffi.rs  lib.rs  loader.rs
lotus-vanilla/: Cargo.toml  meson.build
lotus-vanilla/src/: lib.rs
lotus/src/: app.rs  i18n.rs  main.rs  meson.rs.in
lotus/src/views/: mod.rs
