[workspace]
resolver = "2"
members = [
  "lotus",
  "lotus-plugin",
  "lotus-vanilla",
]
default-members = []

[profile.release]
codegen-units = 1 # Best LLVM optimization
panic = "abort" # Remove unwind code on release
opt-level = 3
lto = true
strip = true

[workspace.package]
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = [
  "Max Rodriguez <me@maxrdz.com>"
]
repository = "https://gitlab.com/maxrdz/lotus"

[workspace.metadata.cross.build]
default-target = "aarch64-unknown-linux-gnu"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
image.name = "ubuntu:24.04"
image.toolchain = ["aarch64-unknown-linux-gnu"]
pre-build = [
    "apt-get update",
    "apt-get install --assume-yes git llvm clang pkg-config gcc g++",
    "apt-get download libclang-dev modemmanager-dev",
    "dpkg --force-all -i *.deb",
]

[workspace.dependencies]
cfg-if = "1"

[workspace.dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]
