[package]
name = "lotus-plugin"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = ["plugin"]
loader = ["dep:libloading"]
plugin = []

[dependencies]
libc = "0.2"
libloading = { version = "0.8", optional = true}
