[package]
name = "lotus-vanilla"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lotus-plugin = { path = "../lotus-plugin", version = "0.1.0" }
