[package]
name = "lotus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
cfg-if.workspace = true
i18n-embed.workspace = true
i18n-embed-fl = "0.9.2"
iced = "0.13"
lotus-plugin = { path = "../lotus-plugin", version = "0.1.0", default-features = false, features = ["loader"]}
rust-embed = "8.5"
