[package]
name = "lotus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
cfg-if.workspace = true
clap = "4.5"
freedesktop_entry_parser = "1.3"
i18n-embed.workspace = true
i18n-embed-fl = "0.9.2"
iced = "0.13"
lotus-plugin = { path = "../lotus-plugin", version = "0.1.0", default-features = false, features = ["loader"]}
pam-client = "0.5"
rust-embed = "8.5"
smol = "0.2"
wayland-client = "0.31"
xdg = "2.5"
